global update of the code